<resources>
    <string name="app_name">E Shoppers</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_category">Categories</string>
    <string name="title_me">ME</string>
    <string name="brands_label">Brands</string>
    <string name="tv_signup">Sign Up</string>
    <string name="tf_name">Mr. Muffin</string>
    <string name="tf_name_hint">Name</string>
    <string name="tf_password_hint">Password</string>
    <string name="required">Required</string>
    <string name="tf_email_hint">Email</string>
    <string name="tf_confirm_password_hint">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="right_arrow">→</string>
    <string name="tv_login">Login</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register Now!</string>
    <string name="leftArrow">←</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_continue">Continue</string>
    <string name="skip">Skip</string>
    <string name="search_for_products">Search for products</string>
    <string name="fragment_one_indication">Discover your perfect match with our intuitive search feature, designed to help you find products that fit your unique needs.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="fragment_two_indication">Add items to your cart with ease and enjoy a seamless shopping experience, all at your fingertips.</string>
    <string name="check_out">Check out!</string>
    <string name="fragment_three_indication">Complete your purchase with confidence and peace of mind, knowing that our secure checkout process ensures your information is safe every step of the way.</string>
    <string name="reclaim">Reclaim</string>
    <string name="cancel">Cancel</string>
    <string name="promocode_dialog_message">Reclaim this </string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
    <string name="building_number">Building Number</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="currency">Currency</string>
    <string name="country">Country</string>
    <string name="category_ad1">SUMMER SALES</string>
    <string name="category_ad2">Up to 50% off</string>
    <string name="t_shirt_category">T-Shirts</string>
    <string name="shoes_category">Shoes</string>
    <string name="accessory_category">Accessory</string>
    <string name="mainCategory_men">Men</string>
    <string name="mainCategory_women">Women</string>
    <string name="mainCategory_sale">Sale</string>
    <string name="mainCategory_kid">Kid</string>
    <string name="recommended">Recommended</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="promocodes">Promocodes</string>
    <string name="total_amount">Total Amount</string>
    <string name="checkout">Checkout</string>
    <string name="color">Color: </string>
    <string name="size">Size: </string>
    <string name="priceSelector_ascendingly">Low-To-High</string>
    <string name="priceSelector_descendingly">High-To-Low</string>
    <string name="filterLabel">Filters</string>
    <string name="priceLabel">Price:</string>
    <string name="profileLabel">My Profile</string>
    <string name="delete">Delete</string>
    <string name="deletion_dialog_title">Deleting an order</string>
    <string name="deletion_dialog_message">Are you sure you want to delete this order ?</string>
    <string name="empty">empty</string>
    <string name="ordersLabel">My Orders</string>
    <string name="favoriteLabel">My Favorites</string>
    <string name="cartLabel">My Cart</string>
    <string name="settingsLabel">Settings</string>
    <string name="signOutLabel">Sign Out</string>
    <string name="profileLoginLabel">Login to enjoy all the features</string>
    <string name="profileSignupLabel">Don\'t have an account ?</string>
    <string name="profileWelcome_message">Welcome! %s</string>
    <string name="rating_number">(85)</string>
    <string name="reviews">Reviews</string>
    <string name="select_size">Select Size / Color</string>
    <string name="phone_number">Phone Number</string>
    <string name="personal_information">Personal Information</string>
    <string name="submit_order">Submit Order</string>
    <string name="order">Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="extra_charges">Extra Charges</string>
    <string name="total">Total</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="totalAmountLabel">Total Amount:</string>
    <string name="trackingNumberLabel">Tracking Number:</string>
    <string name="orderLabel">Order:</string>
    <string name="detailsBtn">Details</string>
    <string name="myOrdersLabel">My Orders</string>
    <string name="noOrders">You Don\'t Have Orders</string>
    <string name="networkError">Couldn\'t Fetch the Data</string>
    <string name="orderInfo">Order Information</string>
    <string name="orderAddress">Shipping Address:</string>
    <string name="formatted_address">%1$s, %2$s, %3$s, %4$s</string>
    <string name="discountLabel">Discount:</string>
    <string name="formatted_discount_percentage">%1$s%%, %2$s</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="unlock_exciting_features">Unlock Exciting Features</string>
    <string name="sign_in_or_join_now">Sign In or Join Now</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="delivery_method_not_chosen_message">"A delivery method must be chosen"</string>
    <string name="successful_checkout_title">Success!</string>
    <string name="successful_checkout_message">Your order will be delivered soon.\nThank your for choosing our app!</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="processing_your_checkout">Processing your checkout</string>
    <string name="successful_checkout_dialog_message">All set! Your order is on its way.</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="search">Search</string>
    <string name="duplicate_cart_item_message">This item is already in the cart</string>
    <string name="wishlist">WishList</string>
    <string name="size_color">Size / Color:</string>
    <string name="_34">(34)</string>
</resources>