<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/selector_home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/selector_category_icon"
        android:enabled="true"
        android:title="@string/title_category" />

    <item
        android:id="@+id/shoppingCartFragment"
        android:icon="@drawable/selector_cart_icon"
        android:enabled="true"
        android:title="@string/shopping_cart" />


    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/selector_heart_icon"
        android:enabled="true"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/selector_user_icon"
        android:enabled="true"
        android:title="@string/title_me" />

</menu>