<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.settings.view.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:fontFamily="@font/metropolis_bold"
            android:textSize="34sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:fontFamily="@font/metropolis_semibold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            android:layout_marginTop="23dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_building_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textInputFilledStyle"
            android:hint="@string/building_number"
            app:layout_constraintStart_toStartOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            android:layout_marginTop="21dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeColor="#FFF"
            app:boxBackgroundColor="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="24dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textInputFilledStyle"
            android:hint="@string/street_name"
            app:layout_constraintTop_toBottomOf="@id/til_building_number"
            android:layout_marginTop="24dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeColor="#FFF"
            app:boxBackgroundColor="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="24dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textInputFilledStyle"
            android:hint="@string/city"
            app:layout_constraintTop_toBottomOf="@id/til_street"
            android:layout_marginTop="24dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeColor="#FFF"
            app:boxBackgroundColor="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="24dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textInputFilledStyle"
            android:hint="@string/country"
            app:layout_constraintTop_toBottomOf="@id/til_city"
            android:layout_marginTop="24dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeColor="#FFF"
            app:boxBackgroundColor="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="24dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:fontFamily="@font/metropolis_semibold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/til_country"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            android:layout_marginTop="48dp"
            />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_currency"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/currency"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/tv_currency"
            app:layout_constraintBottom_toBottomOf="@id/tv_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeColor="#FFF"
            app:boxBackgroundColor="#FFF">

            <AutoCompleteTextView
                android:id="@+id/actv_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/metropolis_medium"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/til_currency"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>