<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:lottie_rawRes="@raw/question"
        app:lottie_autoPlay="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_product_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/unlock_exciting_features"
        android:textColor="@color/black"
        android:fontFamily="@font/metropolis_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/animationView"
        app:layout_constraintTop_toTopOf="@+id/animationView" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_or_join_now"
        android:textColor="@color/textGray"
        android:fontFamily="@font/metropolis_bold"
        app:layout_constraintStart_toStartOf="@+id/tv_product_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_dialog_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:fontFamily="@font/metropolis_bold"
        android:textColor="@color/primaryRed"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/primaryRed"
        app:strokeWidth="2dp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:fontFamily="@font/metropolis_bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/primaryRed"
        app:strokeColor="@color/primaryRed"
        app:strokeWidth="2dp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>