<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:padding="16dp"
    tools:context=".features.authentication.registeration.view.RegisterationActivity">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/tv_signup"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:background="@color/white"
        android:hint="@string/tf_name_hint"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primaryRed"
        app:startIconDrawable="@drawable/icon_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/metropolis_medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:layout_marginTop="20dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primaryRed"
        android:background="@color/white"
        android:hint="@string/tf_email_hint"
        app:startIconDrawable="@drawable/icon_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_medium"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginTop="20dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primaryRed"
        android:background="@color/white"
        android:hint="@string/tf_password_hint"
        app:startIconDrawable="@drawable/icon_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_medium"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_confirm_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginTop="20dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/primaryRed"
        android:background="@color/white"
        android:hint="@string/tf_confirm_password_hint"
        app:startIconDrawable="@drawable/icon_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_medium"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_signup"
        android:textAllCaps="true"
        android:fontFamily="@font/metropolis_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <EditText-->
<!--        android:id="@+id/editTextText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="90dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="text"-->
<!--        android:text="@string/et_name"-->
<!--        android:hint="@string/et_name_hint"-->
<!--        android:fontFamily="@font/metropolis_medium"-->
<!--        android:background="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@+id/tv_signup"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_signup" />-->

</androidx.constraintlayout.widget.ConstraintLayout>